# rust-ocr

./: .env.example  Cargo.toml  LICENSE  README.md  download_models_oar-ocr.sh  download_models_rusto-rs.sh
docs/: SPECIFICATION.md  deployment.md
results/: page1.md  page1.txt
scripts/: batch_ocr.sh  batch_ocr.sh.sh  download_models.sh  enhance_batch.sh  enhance_single.sh  single_ocr.sh
src/: cli.rs  config.rs  export.rs  lib.rs  main.rs  ocr.rs  preprocess.rs
tests/: integration.rs
