[package]
name = "ocr-scanner"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "ocr-scan"
path = "src/main.rs"

[dependencies]
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rayon = "1.10"
docx-rust = "0.11"        # DOCX экспорт

# OAR-OCR
oar-ocr = "0.2"

# Rusto-RS  
rusto-rs = "0.1"
tokio = { version = "1", features = ["full"] }
